adding add ons
